commit multiple lead